2004-10-08  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: Add Linköping (SAAB) to the locations database.
	Patch from Kalle Svensson <kalle@juckapan.org>. Closes #154194.

2004-10-05  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: Add Juneau, Wisconsin to the locations database.
	Patch from Gabriel M. Elder <eldergabriel@charter.net>. Closes
	#152729.

2004-09-29  Gediminas Paulauskas  <menesis@chatsubo.lt>

	* gweather-dialog.c: Make informational labels in details selectable.
	Closes #153835.
	
2004-09-29  Frank Solensky  <frank@solensky.org>

	reviewed by: Davyd Madeley <davyd@madeley.id.au>

	* gweather-xml.c: (gweather_xml_parse_name),
	(gweather_xml_parse_location), (gweather_xml_parse_city),
	(gweather_xml_parse_node), (gweather_xml_parse):
	Add support for "city" in XML heirarchy. Closes #150132.

	* Locations.xml.in: Eight examples of "city" node

2004-09-23  Davyd Madeley  <davyd@madeley.id.au>

	* gweather.schemas.in: Fix message inconsistency. Closes #150920.
	Patch from Chris Kelso <ckelso@heliosphere.org>.

2004-09-21  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: Fixed spelling of EKYT: Aalborg

2004-09-20  Simos Xenitellis  <simos74@gmx.net>

	* Locations.xml.in: Added more Locations for Greece. Closes #150744.

2004-09-20  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: Added Estonian locations. Closes #152302. Patch
	from Chris Kelso <ckelso@heliosphere.org>.

	* gweather.schemas.in: Fix typo in schema. Closes #152209. Patch from
	Chris Kelso <ckelso@heliosphere.org>.

2004-09-16  Davyd Madeley  <davyd@madeley.id.au>

	* Locations: REMOVED. See bug #151506

2004-09-13  Shaun McCance  <shaunm@gnome.org>

	* docs/C/gweather-C.omf:
	* docs/C/gweather.xml:
	- Updates for 2.8 from Angela Boyle

2004-08-24  Davyd Madeley  <davyd@madeley.id.au>

	* weather.c: Fix a TRANSLATOR comment incorrectly indicating "m/s" was
	miles per hour. Closes #150892.

2004-08-22  Davyd Madeley  <davyd@madeley.id.au>
